# URL_shortener

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
docker/api/: entrypoint.sh
migrations/: env.py
migrations/versions/: f3f5016370a0_initial_migration.py
src/api/: main.py
src/api/core/: config.py  database.py  dependencies.py  exceptions.py  logging.py
src/api/models/: __init__.py  base.py  urllink.py
src/api/repositories/: __init__.py  base_repository.py  urllink_repository.py
src/api/routes/: __init__.py  urllinks.py
src/api/schemas/: __init__.py  base_schema.py  urllink_schema.py
src/api/services/: __init__.py  base_service.py  urllink_service.py
src/api/utils/: __init__.py  codec.py  random_code.py  short_code_generator.py  short_url_formatter.py
src/core_shared/: logging_setup.py
