# =================================================================
# Конфигурация проекта
# =================================================================
[project]
name = "URL_shortener"
version = "0.1.0"
description = ""
authors = [
    {name = "Mikalai Sakalouski",email = "nicksok2413@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.124.4,<0.125.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.9,<0.15.0)",
    "mypy (>=1.19.1,<2.0.0)"
]

[tool.poetry]
package-mode = false


# =================================================================
# Конфигурация Ruff
# =================================================================
[tool.ruff]
# Устанавливаем максимальную длину строки
line-length = 120

# Указываем директории, которые линтер и форматтер должены игнорировать
exclude = [
    ".git",
    ".idea",
    ".venv",
    "venv",
    ".ruff_cache",
    ".mypy_cache",
    ".pytest_cache",
    "__pycache__",
]

# Настраиваем линтер
[tool.ruff.lint]
# Наборы правил:
select = [
    "E",   # pycodestyle errors (стандартные ошибки стиля)
    "F",   # Pyflakes (логические ошибки, неиспользуемые импорты)
    "W",   # pycodestyle warnings (предупреждения стиля)
    "I",   # isort (сортировка и группировка импортов)
    "B",   # flake8-bugbear (поиск вероятных багов и архитектурных ошибок)
    "S",   # flake8-bandit (поиск проблем безопасности: пароли в коде, слабые шифры)
]

# Игнорируем конкретные правила, если они мешают
ignore = [
    "E501",  # Line too long. Длину строк контролирует форматтер.
             # Линтер не должен ругаться, если строку невозможно разбить (например, длинный URL).
]

# Указываем дополнительные директории, которые линтер должен игнорировать
exclude = [
    "migrations/versions/*",  # Автосгенерированные миграции не трогаем
]

# Настройка исключений правил для конкретных файлов
[tool.ruff.lint.per-file-ignores]
# В тестах действуют другие правила безопасности и стиля
"tests/**/*.py" = [
    "S101",  # Разрешаем использование `assert`. В продакшене это опасно, в тестах — необходимо
    "S311",  # Разрешаем стандартные генераторы случайных чисел (random), криптостойкость тут не нужна
]

# Файлы __init__.py
"__init__.py" = [
    "F401",  # Разрешаем импортировать модуль, но не использовать его явно в этом файле
]

# Разрешаем вызов функций в аргументах (Depends, Security) для FastAPI
"src/api/core/dependencies.py" = ["B008"]
"src/api/routes/**/*.py" = ["B008"]


# =================================================================
# Конфигурация Mypy
# =================================================================
[tool.mypy]
python_version = "3.12"

# Включаем явное определение баз пакетов (для импортов)
explicit_package_bases = true

# Включаем строгие проверки

# Проверяет тела функций, даже если у них нет аннотаций типов
check_untyped_defs = true  # Помогает найти ошибки в старом коде, который еще не был полностью типизирован

# Запрещает создавать новые функции без полных аннотаций типов для аргументов и возвращаемого значения
disallow_untyped_defs = true  # Обеспечивает полное покрытие типов для нового кода

# Предупреждает, если функция с указанным типом возвращает значение типа `Any`
warn_return_any = true  # Помогает предотвратить "утечку" неопределенных типов в строго типизированный код

# Предупреждает о наличии ненужных комментариев `# type: ignore`
warn_unused_ignores = true  # Помогает поддерживать чистоту кода, удаляя "заглушки", которые больше не актуальны

# Игнорировать библиотеки, у которых нет "стабов" (файлов с типами)
ignore_missing_imports = true

# Директории для исключения из проверки

exclude = [
    "migrations/",
    "tests/",
    "docker/"
]